--- a/Core/Server/Api/BlogEngine.Api/Properties/launchSettings.json
+++ b/Core/Server/Api/BlogEngine.Api/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:48118",
-      "sslPort": 44385
+      "applicationUrl": "http://localhost:50033",
+      "sslPort": 44305
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Api": {
+    "BlogEngine.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
