Added connection to MongoDB and controller

--- a/Core/Server/Api/BlogEngine.Api/appsettings.json
+++ b/Core/Server/Api/BlogEngine.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "BlogtoreDatabaseSettings": {
-    "BooksCollectionName": "Blogs",
+  "BlogstoreDatabaseSettings": {
+    "BlogsCollectionName": "Blogs",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "BlogtoreDb"
   },
