--- a/Core/Server/Api/BlogEngine.Api.Data/BlogEngine.Api.Data.csproj
+++ b/Core/Server/Api/BlogEngine.Api.Data/BlogEngine.Api.Data.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogEngine.Api.Core\BlogEngine.Api.Core.csproj" />
+  </ItemGroup>
+
 </Project>
