--- a/Core/Server/Api/BlogEngine.Api/appsettings.Development.json
+++ b/Core/Server/Api/BlogEngine.Api/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "BlogstoreDatabaseSettings": {
+    "BlogsCollectionName": "Blogs",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BlogtoreDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
