--- a/Core/Server/Api/.gitignore
+++ b/Core/Server/Api/.gitignore
@@ -426,41 +426,12 @@ $RECYCLE.BIN/
 ##
 ## Visual Studio Code
 ##
-.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-
-##
-## Client side
-## 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# App specifics
-appsettings.Development.json
-Core/Server/Api/Database
-appsettings.json
-.git
+## Project specific
+Database 
+appsettings.Develop.json
