--- a/Core/Server/WebApp/Properties/launchSettings.json
+++ b/Core/Server/WebApp/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:41981",
-      "sslPort": 44363
+      "applicationUrl": "http://localhost:31873",
+      "sslPort": 44397
     }
   },
   "profiles": {
@@ -15,8 +15,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BlogEngine": {
+    "WebApp": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
