--- a/Core/Frontend/BlazorClient/BlazorClient.csproj
+++ b/Core/Frontend/BlazorClient/BlazorClient.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="publish/vercel.json"  CopyToPublishDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
